fix table width too narrow

--- a/css/normalize.css
+++ b/css/normalize.css
@@ -193,6 +193,6 @@ td, th {
     vertical-align: top;
     border: 1px solid #ccc;
     display: table-cell;
-    width: 20%;
+    width: 10%;
     height: 20px;
 }
